<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Caique Brener</string>
    <string name="big_star">Big Star</string>
    <string name="bio_history">Desde de criança sempre tive afinidade com tecnologia, sendo assim comecei a estudar tal área e as vertentes que eu mais me identifiquei foi a de programação e de segurança da informação, que na minha opinião fazem parte de um conjunto. Desta forma estou me empenhando ao máximo na área de programação, pois, sei que desta forma estarei aprimorando meu conhecimento na área do hacking. Só que assim como sou apaixonado pela vertente de segurança acabei também me apaixonando pela programação. Dito isso, posso dizer que me considero um jovem sedento por conhecimento que com certeza irão vir a somar em minha carreira de forma direta ou indireta. Além do mais desistir não é uma opção, afinal de contas, foguete não tem ré.</string>
    <string name="placeholder">What is your nickname?</string>
    <string name="done">Done</string>
    <string name="warning">Input Não pode ser vazio</string>
</resources>